# medecin-ia

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.staging.yml
.github/workflows/: cd.yml  ci.yml
Documents/: REQUIREMENTS.md  Tasks.md
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: celery_app.py  main.py
backend/app/core/: config.py  database.py
backend/app/jobs/: index_document.py  sync_ccam.py  sync_has.py  sync_vidal.py
backend/app/middleware/: rate_limit.py  subscription_guard.py
backend/app/models/: __init__.py  audit_log.py  base.py  cabinet.py  chunk.py  consultation.py  doctor_style.py  document.py  drug_interaction.py  medecin.py  metrics.py  patient.py  subscription.py
backend/app/routers/: auth.py  billing.py  consultations.py  documents.py  export.py  interactions.py  patients.py  rag.py  soap.py  transcription.py
backend/app/schemas/: auth.py  soap.py
backend/app/security/: audit.py  encryption.py  hsm.py  jwt.py  pseudonymizer.py  rls.py
backend/app/services/: auth_service.py  billing_service.py  export_service.py  interaction_checker.py  patient_service.py  soap_generator.py  transcription.py
backend/app/tasks/: embedding.py  rag.py  transcription.py
backend/tests/: test_audit.py  test_encryption.py  test_interaction_checker.py  test_rag_pipeline.py  test_soap_validator.py  test_websocket_transcription.py
frontend/: Dockerfile  middleware.ts  next.config.ts  package.json  tailwind.config.ts
frontend/app/: layout.tsx  page.tsx
frontend/hooks/: useTranscription.ts
ia/embedding/: service.py
ia/prompts/: rag_system.py  soap_system.py
ia/soap/: output_validator.py  prompt_assembler.py  style_learner.py
ia/transcription/: postprocessor.py  prompt_builder.py  whisper_pipeline.py
monitoring/loki/: loki-config.yml
(+49 files in other folders)
