[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "medecinai-backend"
version = "0.1.0"
requires-python = ">=3.12"

# ── Ruff ──────────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
  "ANN", # flake8-annotations (type hints)
  "S",   # flake8-bandit (security)
  "PTH", # flake8-use-pathlib
]
ignore = [
  "ANN101", # self type annotation not required
  "ANN102", # cls type annotation not required
  "S101",   # assert allowed in tests
  "B008",   # FastAPI Depends() as default arg
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "S"]  # Relax annotations and security rules in tests
"alembic/**" = ["ANN", "I"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

# ── Mypy ──────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true   # évite les erreurs sur les libs sans stubs
disallow_untyped_defs = true
disallow_any_generics = true
warn_return_any = true
warn_unused_ignores = true
exclude = ["alembic/", "tests/"]

[[tool.mypy.overrides]]
# Libs courantes sans stubs complets
module = [
  "faster_whisper.*",
  "presidio_analyzer.*",
  "presidio_anonymizer.*",
  "rank_bm25.*",
  "sentence_transformers.*",
  "celery.*",
  "stripe.*",
  "fhir.*",
]
ignore_missing_imports = true

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "--tb=short -q"
